--- a/Dutluk/res/values/strings.xml
+++ b/Dutluk/res/values/strings.xml
@@ -50,7 +50,7 @@
 	<string name="changePhone">Change Phone</string>
 	<string name="changeBiography">Change Biography</string>
 	<string name="enterName">Enter Name</string>
-	<string name="enterTags"> Enter Tags of Stor </string>
+	<string name="enterTags"> Enter Tags of Story</string>
 	<string name="enterEmail">Enter E-mail</string>
 	<string name="enterPassword">Enter Password</string>
 	<string name="enterTitle">Enter Title</string>
@@ -60,7 +60,7 @@
 	<string name="pickTime">Pick Time</string>
 	<string name="giveNameToPlace">Give Name to Place</string>
 	<string name="enterUserTags">Enter Name of User</string>
-	<string name="enterPlaceTags">Enter Tags of Place(separate with comma</string>
+	<string name="enterPlaceTags">Enter Tags of Place(separate with comma)</string>
 	<string name="enterStoryTags">Enter Tags of Story(separate with comma)</string>
 	
 </resources>
