--- a/LoginActivity/res/values/strings.xml
+++ b/LoginActivity/res/values/strings.xml
@@ -6,7 +6,7 @@
     
 	<!-- App based strings -->
     <string name="app_name">Dutluk</string>
-    <string name="action_settings">Settings</string>
+    <string name="advancedSearch">Advanced Search</string>
     
     <!-- Title strings -->
     <string name="title_activity_register">Register</string>
@@ -38,10 +38,11 @@
 	<string name="btnResetPwd">Reset Password</string>
 	<string name="btnAddStory">Add Story</string>
 	<string name="btnIRememberThat">I Remember That</string>
-	<string name="btnComments">Comments</string>
+	<string name="btnComments">Add Comment</string>
 	<string name="btnSubscribeWriter">Subscribe Writer</string>
 	<string name="btnSubscribePlace">Subscribe Place</string>
 	<string name="btnSearch">Search</string>
+	<string name="btnShowMyStories">Show My Stories</string>
 	
 	<!-- Hint strings -->
 	<string name="changeName">Change Name</string>
