--- a/LoginActivity/res/values/strings.xml
+++ b/LoginActivity/res/values/strings.xml
@@ -37,10 +37,13 @@
 	<string name="btnForgotPwdLogin">Forgot Password?</string>
 	<string name="btnResetPwd">Reset Password</string>
 	<string name="btnAddStory">Add Story</string>
-	<string name="btnIRememberThat">I Remember That</string>
+	<string name="btnRememberThat">Remember That</string>
+	<string name="btnNotRememberThat">Not Remember That</string>
 	<string name="btnComments">Add Comment</string>
 	<string name="btnSubscribeWriter">Subscribe Writer</string>
+	<string name="btnUnsubscribeWriter">Unsubscribe Writer</string>
 	<string name="btnSubscribePlace">Subscribe Place</string>
+	<string name="btnUnsubscribePlace">Unsubscribe Place</string>
 	<string name="btnSearch">Search</string>
 	<string name="btnShowMyStories">Show My Stories</string>
 	
@@ -58,7 +61,7 @@
 	<string name="uploadImage">Upload Image</string>
 	<string name="enterStory">Enter Story</string>
 	<string name="pickPlace">Pick a Place</string>
-	<string name="pickTime">Pick Time</string>
+	<string name="pickTime">Enter custom time or pick it</string>
 	<string name="giveNameToPlace">Give Name to Place</string>
 	<string name="enterUserTags">Enter Name of User</string>
 	<string name="enterPlaceTags">Enter Tags of Place(separate with comma)</string>
